# ppdrive

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  NOTES.MD  README.MD  TODO  TODO.md  build.sh  compose.yml  db.sqlite-shm  db.sqlite-wal  diesel.toml  install.ps1  install.sh  migrate.sh  mimes.json  nnn.md  openapi.yml  ppd_config.toml  sqlite.sh
.github/workflows/: docker-publish.yml  page.yml  release-dylibs.yml  (+5 more)
app/: Cargo.toml
app/src/: command.rs  error.rs  errors.rs  m.rs  main.rs  manager.rs  state.rs
app/src/plugins/: mod.rs  service.rs
cli/: Cargo.toml
cli/src/: command.rs  configure.rs  error.rs  errors.rs  imp.rs  main.rs  tests.rs
core/: Cargo.toml  db.sqlite
core/migrations/: 20250509090017_create_users.up.sql
core/src/: config.rs  db.rs  errors.rs  jwt.rs  lib.rs  options.rs  tools.rs
core/src/models/: bucket.rs  client.rs  mime.rs  mod.rs  permission.rs  user.rs
core/src/models/asset/: ext.rs  mod.rs
core/src/plugin/: router.rs  service.rs
core/src/prelude/: mod.rs  state.rs
core/src/rest/: extractors.rs  mod.rs
core/src/tools/: mod.rs
cross/: Dockerfile
docs/: GETTING-STARTED.MD  README.md  TERMINOLOGIES.MD  configuration.md  index.html  integration-and-authentication.md
fs/: Cargo.toml
fs/src/: db.rs
fs/src/config/: mod.rs
fs/src/tools/: secrets.rs
handlers/common/: Cargo.toml
handlers/common/src/: errors.rs  extractors.rs  jwt.rs  lib.rs  opts.rs  state.rs  tools.rs
handlers/common/src/common/: extractors.rs
handlers/common/src/plugin/: router.rs  service.rs
handlers/common/src/prelude/: mod.rs  state.rs
handlers/common/src/rest/: extractors.rs  mod.rs
handlers/rest/client/: Cargo.toml  db.sqlite  db.sqlite-shm  db.sqlite-wal
handlers/rest/client/src/: errors.rs  lib.rs  user.rs
handlers/rest/client/tests/test_utils/: functions.rs  mod.rs
libs/: README.MD
libs/handlers/rest/client/: Cargo.toml
libs/handlers/rest/client/src/: auth.rs  errors.rs  lib.rs  user.rs
libs/handlers/rest/client/tests/: client.rs  client_user.rs
libs/handlers/rest/client/tests/test_utils/: functions.rs  mod.rs
libs/handlers/rest/direct/: Cargo.toml
libs/handlers/rest/direct/src/: errors.rs  lib.rs  user.rs
libs/handlers/rest/direct/tests/: direct.rs
libs/handlers/rest/direct/testssss/: client.rs  client_user.rs
libs/handlers/rest/direct/testssss/test_utils/: functions.rs  mod.rs
libs/handlers/rest/test-utils/: Cargo.toml
libs/handlers/rest/test-utils/src/: client.rs  direct.rs  lib.rs
libs/services/rest/: Cargo.toml
libs/services/rest/src/: app.rs  errors.rs  lib.rs
manager/: Cargo.toml
manager/src/: command.rs  errors.rs  main.rs  manage.rs  ops.rs  tests.rs
migrations/: 20250502061919_create_users.sql  20250502062947_create_user_permissions.sql  20250502063126_create_assets.sql  20250502063248_create_clients.sql  20250509090017_create_users.up.sql  20250509090410_create_assets.down.sql  20250509090410_create_assets.up.sql  20250509090504_create_asset_asset_permissions.down.sql  20250509090504_create_asset_asset_permissions.up.sql  20250509090611_create_clients.up.sql  20260531175615_create_clients.down.sql  20260531175615_create_clients.up.sql  20260605162018_create_sessions.up.sql
modules/bookkeeper/: Cargo.toml
modules/bookkeeper/src/: errors.rs  lib.rs  validators.rs
modules/bookkeeper/src/db/: migration.rs  mod.rs
modules/bookkeeper/src/models/: asset.rs  bucket.rs  client.rs  mime.rs  mod.rs  permission.rs  user.rs
modules/fs/: Cargo.toml
modules/fs/src/: auth.rs  errors.rs  free.rs  lib.rs  opts.rs  utils.rs
modules/fs/src/models/: bucket.rs
ppdocs/: docusaurus.config.ts  openapi.yml  package.json
ppdrive/: Cargo.toml  install.sh
ppdrive/src/: command.rs  errors.rs  imp.rs  main.rs  manage.rs  ops.rs  tests.rs
ppdrive/src/config/: configor.rs  secrets.rs
ppdrive/src/routes/: mod.rs
ppdrive/src/utils/: fs.rs
ppdrive/src/utils/sqlx/: filter.rs
ppdrive/src/utils/tools/: client.rs  mod.rs
ppdrive_core/: Cargo.toml
ppdrive_rest/: .gitignore  Cargo.toml  LICENSE
rest/: Cargo.toml
server/: Cargo.toml  README.MD  ppd_config.toml
server/src/: app.rs  errors.rs  lib.rs  main.rs  middlewares.rs  payloads.rs  resp.rs  routers.rs  state.rs  utils.rs
server/src/config/: configor.rs  mod.rs
server/src/models/: client.rs
server/src/routers/: middlewares.rs  mod.rs  payloads.rs  resp.rs  session.rs  upload.rs
server/src/routes/: client.rs  extractors.rs  mod.rs  protected.rs
server/src/routes/client/: mod.rs  user.rs
server/src/routes/tests/: client.rs  mod.rs
server/src/routes/tests/client/: mod.rs  user.rs
server/src/utils/: jwt.rs  mod.rs
server/src/utils/tools/: client.rs
server/tests/: upload.rs
server/tests/common/: mod.rs
servers/rest/: Cargo.toml
servers/rest/src/: app.rs  errors.rs  extractors.rs  general.rs  jwt.rs  lib.rs  opts.rs  state.rs
servers/rest/src/client/: mod.rs  user.rs
servers/rest/src/routes/: mod.rs
servers/rest/src/routes/tests/: mod.rs
servers/rest/src/routes/tests/client/: user.rs
servers/rest/src/tests/: client_user.rs  general.rs  mod.rs
servers/rest/src/tests/test_utils/: functions.rs  mod.rs
servers/rest/src/utils/: mod.rs
servers/rest/tests/: client.rs  client_user.rs  general.rs
servers/rest/tests/test_utils/: functions.rs  mod.rs
service/: Cargo.toml
services/rest/: Cargo.toml
services/rest/src/: app.rs  errors.rs  lib.rs
services/rest/src/tests/: client.rs  client_user.rs
services/rest/src/tests/test_utils/: mod.rs
shared/: Cargo.toml
shared/src/: api.rs  broker.rs  buckets.rs  client.rs  db.rs  errors.rs  lib.rs  models.rs  opts.rs  plugin.rs  server.rs  tools.rs  user.rs  utils.rs
shared/src/client/: mod.rs  models.rs
shared/src/config/: auth.rs  mod.rs
shared/src/models/: clients.rs  mod.rs
shared/src/opts/: api.rs  internal.rs  mod.rs
shared/src/plugins/: mod.rs  router.rs  service.rs
shared/src/tools/: auth.rs  config.rs  hasher.rs  mod.rs  secrets.rs
src/: app.rs  config.rs  errors.rs  main.rs  models.rs  schema.rs  state.rs
(+76 files in other folders)
