[workspace]
resolver = "3"
members = [
    # binaries
    "ppdrive",
    "manager",

    # core crates
    "shared",
    "service",

    # modules
    "modules/fs",
    "modules/bookkeeper",

    # libraries
    "libs/services/rest",
    "libs/handlers/rest/client",
    "libs/handlers/rest/direct", 
    "libs/handlers/rest/test-utils",
]

[workspace.package]
edition = "2024"
version = "0.1.0-beta.3"

[workspace.dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
bincode = "2.0.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2"
axum = "0.7.9"
axum-macros = "0.4.2"
tokio = "1.47.1"
tokio-util = "0.7.16"
uuid = "1.16.0"
clap = "4.5.45"
ppd_shared = { path = "shared" }
ppd_bk = { path = "modules/bookkeeper", default-features = false }
ppd_fs = { path = "modules/fs" }
ppd-service = { path = "service", default-features = false }
libloading = "0.8.8"
rbs = { version = "4.5.51" }
rbatis = { version = "4.5.51" }
rest-test-utils.path = "libs/handlers/rest/test-utils"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = false
