[workspace]
resolver = "3"
members = ["ppdrive", "server", "shared"]

[workspace.package]
edition = "2024"
version = "0.1.0-alpha"

[workspace.dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2"
axum = "0.8.9"
axum-macros = "0.5.1"
tokio = "1.52.3"
tokio-util = "0.7.16"
uuid = "1.16.0"
clap = "4.6.1"
urlencoding.git = "https://github.com/prodbyola/rust_urlencoding"
validator = "0.20.0"
sqlx = "0.9.0"
chrono = "0.4.44"
anyhow = "1.0.102"
dotenvy = "0.15.7"
nanoid = "0.5.0"
shared = { path = "./shared" }
time = "0.3.53"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = false
