[package]
name = "ppdrive"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "time"] }
tokio-util = { workspace = true }
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { workspace = true, features = ["derive"] }
ppd_shared.workspace = true
bincode.workspace = true
rand = "0.9.2"
