[package]
name = "ppdrive-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ppdrive"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "net",
    "time",
] }
tracing.workspace = true
clap = { workspace = true, features = ["derive"] }
ppd_shared = { workspace = true, features = ["logger"] }
bincode.workspace = true
ppdrive = { workspace = true, features = ["plugin"] }
