[package]
name = "ppdrive"
version.workspace = true
edition.workspace = true

[features]
default = ["prelude"]
prelude = []
plugin = ["dep:libloading", "dep:tokio"]
tools = ["dep:chacha20poly1305", "dep:hex", "dep:sha3"]
rest = ["prelude", "tools", "jwt", "dep:axum", "dep:axum-macros", "dep:serde_json", "dep:uuid"]
jwt = ["dep:jsonwebtoken"]
db = []

[dependencies]
axum  = { workspace = true, features = ["multipart"], optional = true }
serde_json = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"], optional = true }
axum-macros = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["sync"] }
tokio-util.workspace = true
ppd_shared = { workspace = true, features = ["api"] }
ppd_bk.workspace = true
ppd_fs.workspace = true
libloading = { workspace = true, optional = true }
serde.workspace = true
jsonwebtoken = { version = "9.3.1", optional = true }
mime_guess = "2.0.5"
chrono = "0.4.40"
chacha20poly1305 = { version = "0.10.1", optional = true }
hex = { version = "0.4.3", optional = true }
tracing.workspace = true
sha3 = { version = "0.10.8", optional = true }
