[package]
name = "ppdrive_fs"
version = "0.1.0"
edition = "2024"

[dependencies]
rbs = { version = "4.5.51" }
rbatis = { version = "4.5.51" }

rbdc-sqlite = { version = "4.6" }
rbdc-mysql = { version = "4.6" }
rbdc-pg = { version = "4.6" }
rbdc-mssql = { version = "4.6" }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["fs"] }
tracing = "0.1"
uuid = { version = "1.16.0", features = ["v4"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "any",
    "sqlite",
    "migrate",
] }
chacha20poly1305 = "0.10.1"
hex = "0.4.3"
toml = "0.8.22"
modeller = { path = "../../modeller/modeller" }

[dev-dependencies]
futures = "0.3.31"
serial_test = "3.2.0"
