[package]
name = "manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = { workspace = true, features = [
    "net",
    "rt",
    "rt-multi-thread",
    "macros",
] }
tokio-util.workspace = true
tracing.workspace = true
rand = { version = "0.9.2" }
ppd_shared.workspace = true
handlers = { workspace = true, features = ["plugin", "db", "tools"] }
bincode.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["time"]}