[package]
name = "manager"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros"] }
tokio-util.workspace = true
tracing.workspace = true
rand = { version = "0.9.2" }
ppd_shared = { workspace = true, features = ["logger"] }
ppdrive = { workspace = true, features = ["plugin", "db", "tools"] }
bincode.workspace = true
rbatis.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["time"] }
futures = "0.3.31"
serial_test = "3.2.0"
