[package]
name = "ppdrive"
version = "0.1.0-rc.1"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "net",
    "time",
] }
tracing.workspace = true
clap = { workspace = true, features = ["derive"] }
ppd_shared = { workspace = true, features = ["logger"] }
bincode.workspace = true
ppd-service = { workspace = true, features = ["plugin"] }
