[package]
name = "ppdrive"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "net",
    "time",
] }
tracing.workspace = true
clap = { workspace = true, features = ["derive"] }
ppd_shared = { workspace = true, features = ["logger"] }
bincode.workspace = true
ppd-service = { workspace = true, features = ["plugin"] }
