[package]
name = "server"
edition.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "fs"] }
axum = { workspace = true, features = ["macros", "multipart"] }
serde.workspace = true
sqlx = "0.9.0"
anyhow.workspace = true
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
shared.workspace = true
tracing = "0.1.44"
tower-http = { version = "0.6.11", features = [
    "cors",
    "trace",
    "tracing",
    "fs",
] }
futures-util = "0.3.32"

[dev-dependencies]
axum-test = "20.1.0"