[package]
name = "handlers"
version = "0.1.0"
edition = "2024"

[features]
default = ["prelude"]
prelude = []
plugin = ["dep:libloading", "dep:tokio"]
tools = ["dep:chacha20poly1305", "dep:hex"]
rest = ["prelude", "tools", "jwt"]
jwt = ["dep:jsonwebtoken"]

[dependencies]
axum.workspace = true
axum-macros.workspace = true
tokio = { workspace = true, optional = true, features = ["sync"] }
tokio-util.workspace = true
ppd_shared.workspace = true
ppd_bk.workspace = true
ppd_fs.workspace = true
libloading = { workspace = true, optional = true }
serde.workspace = true
jsonwebtoken = { version = "9.3.1", optional = true }
uuid = { workspace = true, features = ["v4"] }
mime_guess = "2.0.5"
chrono = "0.4.40"
chacha20poly1305 = { version = "0.10.1", optional = true }
hex = { version = "0.4.3", optional = true }
