[package]
name = "ppd_bk"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true

rbs.workspace = true
rbatis.workspace = true

rbdc-sqlite = { version = "4.6" }
rbdc-mysql = { version = "4.6" }
rbdc-pg = { version = "4.6" }
rbdc-mssql = { version = "4.6" }
tokio = { version = "1.45.1" }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"

uuid = { version = "1.16.0", features = ["v4"] }
modeller = { path = "../../../modeller/modeller" }
ppd_shared.workspace = true
