[package]
name = "ppd_fs"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
serde = "1.0.219"
tokio = { version = "1.47.1", features = ["fs"] }
mime_guess = "2.0.5"
ppd_bk = { path = "../bookkeeper", optional = true }
ppd_shared.workspace = true

[features]
default = []
auth = ["dep:ppd_bk"]
