[package]
name = "ppd_fs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.219"
tokio = { version = "1.47.1", features = ["fs"] }
ppd_bk = { path = "../bookkeeper", optional = true }
ppd_shared = { path = "../../shared" }
mime_guess = "2.0.5"

[features]
default = ["auth"]
auth = ["dep:ppd_bk"]
