[package]
name = "ppdrive_rest"
version = "0.27.20"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["multipart"] }
axum-macros = "0.4.2"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = [
    "cors",
    "trace",
    "tracing",
    "fs",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4.40"
serde = "1.0.219"
serde_json = "1.0.140"
mime_guess = "2.0.5"
jsonwebtoken = "9.3.1"
uuid = { version = "1.16.0", features = ["v4"] }
ppdrive_fs = { path = "../../modules/fs" }

[dev-dependencies]
axum-test = "16"
futures = "0.3.31"
serial_test = "3.2.0"
