[package]
name = "ppd_rest"
version = "0.27.20"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["client-auth"]
client-auth = []
direct-auth = []
zero-auth = []

[dependencies]
axum.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = [
    "cors",
    "trace",
    "tracing",
    "fs",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0.219"
ppd_shared.workspace = true
ppd_bk.workspace = true
handlers.workspace = true

[dev-dependencies]
axum-test = "16"
futures = "0.3.31"
serial_test = "3.2.0"
