[package]
name = "ppd_rest"
version = "0.27.20"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
axum ={ workspace = true, features = ["multipart"]}
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = [
    "cors",
    "trace",
    "tracing",
    "fs",
] }
bincode.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender.workspace = true
ppd_shared.workspace = true
ppd_bk.workspace = true
handlers.workspace = true

[dev-dependencies]
axum-test = "16"
futures = "0.3.31"
serial_test = "3.2.0"
rest_client.workspace = true
ppd_fs.workspace = true
serde_json.workspace = true
client_tools.workspace = true