[package]
name = "rest_client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde_json.workspace = true
axum = { workspace = true, features = ["multipart"] }
tokio ={ workspace = true, features = ["fs"] }
uuid = { workspace = true, features = ["v4"] }
axum-macros.workspace = true
handlers = { workspace = true, features = ["rest"] }
ppd_shared.workspace = true
ppd_bk.workspace = true
ppd_fs.workspace = true