[package]
name = "ppd-rest"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { workspace = true, features = ["multipart"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util.workspace = true
tower = "0.4.13"
tower-http = { version = "0.5.1", features = [
    "cors",
    "trace",
    "tracing",
    "fs",
] }
bincode.workspace = true
tracing.workspace = true
ppd_shared = { workspace = true, features = ["logger"] }
ppd_bk = { workspace = true, features = ["rbatis"] }
ppdrive = { workspace = true, features = ["plugin", "rest"] }