[package]
name = "rest-client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde_json.workspace = true
axum = { workspace = true, features = ["multipart"] }
tokio ={ workspace = true, features = ["fs"] }
uuid = { workspace = true, features = ["v4"] }
axum-macros.workspace = true
ppdrive = { workspace = true, features = ["rest"] }
ppd_shared = { workspace = true, features = ["api"] }
ppd_bk.workspace = true
ppd_fs.workspace = true

[dev-dependencies]
rest-test-utils.workspace = true
axum-test = "16"
futures = "0.3.31"
serial_test = "3.2.0"