[package]
name = "rest-client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[features]
test = []

[dependencies]
axum = { workspace = true, features = ["multipart"] }
tokio ={ workspace = true, features = ["fs", "rt-multi-thread"] }
axum-macros.workspace = true
ppdrive = { workspace = true, features = ["rest"] }
ppd_shared = { workspace = true, features = ["api"] }
ppd_bk.workspace = true

[dev-dependencies]
rest-test-utils.workspace = true
ppd_fs.workspace = true
serde_json.workspace = true
axum-test = "16"
futures = "0.3.31"
serial_test = "3.2.0"