[package]
name = "rest-direct"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[features]
test = []

[dependencies]
axum = { workspace = true, features = ["multipart"] }
axum-macros.workspace = true
tokio ={ workspace = true, features = ["fs", "rt-multi-thread"] }
ppdrive = { workspace = true, features = ["rest"] }
ppd_shared = { workspace = true, features = ["api"] }
ppd_bk.workspace = true

[dev-dependencies]
ppd_fs.workspace = true
serde_json.workspace = true
axum-test.workspace = true
futures = "0.3.31"
serial_test = "3.2.0"
rest-test-utils.workspace = true
