[package]
name = "rest-test-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json.workspace = true
axum = { workspace = true, features = ["multipart"] }
tokio = { workspace = true, features = ["fs"] }
uuid = { workspace = true, features = ["v4"] }
axum-macros.workspace = true
ppd-service = { workspace = true, features = ["rest"] }
ppd_shared = { workspace = true, features = ["logger"] }
ppd_bk.workspace = true
ppd_fs.workspace = true
rest-client = { path = "../client" }
axum-test = "16"
