[package]
name = "rest-test-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json.workspace = true
axum = { workspace = true, features = ["multipart"] }
tokio = { workspace = true, features = ["fs"] }
uuid = { workspace = true, features = ["v4"] }
axum-macros.workspace = true
ppdrive = { workspace = true, features = ["rest", "plugin"] }
ppd_shared = { workspace = true, features = ["logger", "api"] }
ppd_bk.workspace = true
ppd_fs.workspace = true
rest-client = { path = "../client", features = ["test"] }
rest-direct = { path = "../direct", features = ["test"] }
axum-test = "16"
